--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,34 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  --white: #fff;
+
+  --background: rgba(48, 48, 48, 0.63);
+
+  --color-1: #2f8c63;
+  --color-2: #e4c0a7;
+  --color-3: #1f2320;
+  --color-4: #985a4c;
+  --color-5: #d33432;
+
+  --soft-green:rgb(113, 255, 186)3;
+  --dark-red: #7c0000;
+
+  --blue-300: #075bbb;
+  --blue-500: #094493;
+
+  --shadow: #0000001a;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Inter', sans-serif;
+  font-size: 1rem;
+}
+
+body {
+  background-image: url('/public/background.png');
+  height: 100vh;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
