--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: var(--soft-green);
+  background-color: var(--color-1);
   width: 100%;
   height: 150px;
   display: flex;
