--- a/src/components/home/index.module.css
+++ b/src/components/home/index.module.css
@@ -2,15 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
 }
 
 .search {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin: 0 auto;
+  justify-content: space-around;
   width: 100%;
+  margin: 20px;
 }
 
 .input {
@@ -22,6 +21,7 @@
   align-items: center;
   justify-content: center;
   margin-right: 10px;
+  text-align: center;
 }
 
 .buttonSearch {
@@ -31,9 +31,32 @@
   border: 3px solid var(--shadow);
   background-color: var(--color-3);
   color: white;
+  font-size: 1.15rem;
+  font-weight: bold;
+  cursor: pointer; 
+}
+
+.buttonSearch:hover {
+  background-color: var(--color-6);
+  transition: 0.5s;
 }
 
 .shoppingCart {
   width: 75px;
-  justify-self: end;
+  height: 75px;
+  position: fixed;
+  top: 20px;
+  right: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer; 
+}
+
+.shoppingCart:hover {
+  transform: scale(1.2);
+  transition: transform 0.5s;
+}
+
+.containerProducts {
 }
