--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Inter', sans-serif;
+  font-family: 'Playpen Sans', serif;;
+  font-family: 'Playfair Display SC', cursive;
   font-size: 1rem;
 }
 
