--- a/src/components/home/index.module.css
+++ b/src/components/home/index.module.css
@@ -1,39 +1,38 @@
-.main {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
 .search {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: center;
   width: 100%;
   margin: 20px;
 }
 
 .input {
   width: 500px;
-  height: 40px;
+  height: 45px;
   border-radius: 8px;
   border: 3px solid var(--color-7);
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-right: 10px;
+  margin-right: 20px;
   text-align: center;
+  font-size: 1.3rem;
 }
 
 .buttonSearch {
-  width: 100px;
-  height: 40px;
+  width: 130px;
+  height: 45px;
   border-radius: 8px;
   border: 3px solid var(--shadow);
   background-color: var(--color-3);
   color: white;
-  font-size: 1.15rem;
+  font-size: 1.3rem;
+  font-family: 'Playpen Sans';
   font-weight: bold;
-  cursor: pointer; 
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .buttonSearch:hover {
@@ -56,7 +55,4 @@
 .shoppingCart:hover {
   transform: scale(1.2);
   transition: transform 0.5s;
-}
-
-.containerProducts {
 }
