--- a/src/components/home/index.module.css
+++ b/src/components/home/index.module.css
@@ -56,3 +56,45 @@
   transform: scale(1.2);
   transition: transform 0.5s;
 }
+
+.containerProducts {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin: 20px;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 430px;
+  height: 400px;
+  border-radius: 20px;
+  border: 3px solid var(--color-7);
+  margin: 10px;
+  background-color: var(--white);
+}
+
+.description,
+.price {
+  font-family: 'Playpen Sans';
+  font-size: 1.15rem;
+  font-weight: bold;
+  margin: 10px;
+}
+
+.image {
+  width: 150px;
+  height: 150px;
+  margin: 10px;
+}
+
+.btnCard {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
