--- a/src/components/home/index.module.css
+++ b/src/components/home/index.module.css
@@ -37,7 +37,7 @@
 
 .buttonSearch:hover {
   background-color: var(--color-6);
-  transition: 0.5s;
+  transition: 0.7s;
 }
 
 .shoppingCart {
@@ -54,7 +54,7 @@
 
 .shoppingCart:hover {
   transform: scale(1.2);
-  transition: transform 0.5s;
+  transition: transform 0.7s;
 }
 
 .containerProducts {
@@ -97,4 +97,38 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+
+.icon {
+  color: var(--white);
+}
+
+.btn {
+  width: 85px;
+  height: 60px;
+  border-radius: 10px;
+  background-color: var(--color-3);
+  border: 3px solid var(--shadow);
+  color: white;
+  font-size: 1.3rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 10px;
+}
+
+.btn:hover {
+  background-color: var(--color-6);
+  transition: 0.5s;
+}
+
+.icon:hover {
+  transform: scale(1.2);
+  transition: transform 0.5s;
+}
+
+.price:hover {
+  transform: scale(1.2);
+  transition: transform 0.8s;
 }
