--- a/src/components/category/category.module.css
+++ b/src/components/category/category.module.css
@@ -4,6 +4,15 @@
   width: 100%;
 }
 
+.section {
+  display: flex;
+  align-items: center;
+  width: auto;
+  margin: 20px auto;
+  max-width: 500px;
+  max-height: 500px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
