--- a/src/components/checkout/checkout.module.css
+++ b/src/components/checkout/checkout.module.css
@@ -24,20 +24,21 @@
   justify-content: center;
   background-color: var(--white);
   border-radius: 20px;
+  border: 3px solid var(--color-7);
+  width: 900px;
+  height: 120px;
+  margin: 30px;
 }
 
 .containerProducts {
-  width: 100%;
   display: flex;
   flex-direction: row;
-  text-align: center;
   align-items: center;
   justify-content: space-evenly;
   margin: 5px;
 }
 
 .name {
-  display: block;
   width: 400px;
   font-family: 'Playpen Sans';
   font-size: 1.3rem;
@@ -53,10 +54,20 @@
   margin: 10px;
 }
 
-.price, .total,
-.quantity {
+.table {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+}
+
+.head, .body {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   font-family: 'Playpen Sans';
   font-size: 1.3rem;
   font-weight: bold;
-  margin: 10px;
+  margin: 5px;
 }
